# pbdb

./: Cargo.toml  LICENSE  README.md
integration-tests/: Cargo.toml  build.rs
integration-tests/proto/: tests.proto
integration-tests/src/: basic_message.rs  basic_tests.rs  lib.rs
pbdb-macros/: Cargo.toml  build.rs
pbdb-macros/proto/: descriptor_subset.proto
pbdb-macros/src/: lib.rs
prdb-build/: Cargo.toml
prdb-build/proto/: prdb.proto
prdb-build/tests/: test.proto  test_build.rs
proto/: pbdb.proto
src/: lib.rs  private.rs
