[package]
name = "pbdb"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "DBMS over RocksDB with schema as Protobuf description with custom annotations"
homepage = "https://github.com/freopen/pbdb"
repository = "https://github.com/freopen/pbdb"
exclude = [
  ".vscode"
]

[workspace]
members = ["pbdb-macros", "integration-tests"]

[dependencies]
pbdb-macros = { version = "0.1.0", path = "pbdb-macros" }
prost = "0.8.0"
rocksdb = "0.17.0"
thiserror = "1.0.29"

[dev-dependencies]
tempfile = "3.2.0"
