[package]
name = "pbdb-macros"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "DBMS over RocksDB with schema as Protobuf description with custom annotations"
homepage = "https://github.com/freopen/pbdb"
repository = "https://github.com/freopen/pbdb"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
prost = "0.8.0"
quote = "1.0.9"

[build-dependencies]
prost-build = "0.8.0"
