[package]
name = "pbdb-macros"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "DBMS over RocksDB with schema as Protobuf description with custom annotations"
homepage = "https://github.com/freopen/pbdb"
repository = "https://github.com/freopen/pbdb"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.32"
prost = "0.9.0"
quote = "1.0.10"

[build-dependencies]
prost-build = "0.9.0"
